<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/nudepink"
        android:textSize="48sp"
        android:padding="10dp"
        android:gravity="end|bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/lightpink"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="#3E2723"

            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="#3E2723"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/lightpink"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="#3E2723"

            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="#3E2723"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/lightpink"

        >

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="#3E2723"

            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="#3E2723"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onOperator"
            android:text="@string/subtract"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/lightpink"

        >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="#3E2723"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textColor="#3E2723"

            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="clearEverything"
            android:text="@string/ce"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />



        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/lightpink"

        >





        <Button
            android:id="@+id/Equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hot_pink"
            android:onClick="onEqual"
            android:text="@string/equals"
            android:textColor="#3E2723"


            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>



</LinearLayout>